welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: ')' expected but 'for' found.
	for ( i <- 2 to getMondeHauteur) {
        ^